# rmc

./: .gitignore  .mcp.json  AGENTS.md  README.md  build_exe.py  pyproject.toml  rmc.spec  skills-lock.json
.cursor/rules/: caveman-ultra.mdc  token-saviour.mdc
.github/workflows/: generate_bins.yml
.serena/: project.yml
scripts/: carve_ark_tokens.py  carve_remarkable_fonts.py  extract_qt_rcc.py  pull_remarkable_ark_tokens.ps1  pull_remarkable_fonts.ps1  pull_remarkable_fonts.sh  pull_remarkable_fonts_bootstrap.ps1  pull_remarkable_typography.ps1  pull_remarkable_typography_tight.ps1  woff2_to_ttf.py
src/rmc/: cli.py
src/rmc/exporters/: inmkl.py  svg.py  writing_tools.py
tests/: check_al_medio_alignment.py  check_b87e_font_sizes.py  check_b87e_ink_font_scale.py  check_b87e_ink_text_align.py  check_inkml_text_layout.py  upload_b87e_font_ladder.py  upload_b87e_ink_dx_ladder.py  upload_b87e_ink_scale_ladder.py  upload_b87e_l1_l4_dy_ladder.py  upload_b87e_l1_text_dy_ladder.py  upload_b87e_l234_dy_ladder.py  upload_b87e_l2_dy_fine_ladder.py  upload_b87e_l2_text_dy_ladder.py  upload_b87e_l34_dy_ladder.py  upload_b87e_l34_font_ladder.py  upload_b87e_l3_dy_ladder.py  upload_b87e_l4_dy_ladder.py  upload_b87e_onenote.py  upload_b87e_text_dy_ladder.py
tests/expected/ark_tokens/controls/: Body.qml  Caption.qml  README.txt  Title.qml  qmldir
tests/expected/device_typography_tight/: webui-index.css
tests/onenote_calib/: check_generate.py  generate_calib_page.py  upload_and_fit.py
tests/rm/: al_medio.rm  b87e5354-9e95-4791-b5f4-672ccb94aa4e.rm  onenote_text_block.rm
(+38 files in other folders)
