[tool.poetry]
name = "rmc"
version = "0.3.1-dev"
description = "Convert to/from v6 .rm files from the reMarkable tablet"
authors = ["Rick Lupton <mail@ricklupton.name>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
rmscene = "^0.7.0"
click    = "^8.0"

# UI client dependencies
PySimpleGUI = "^5.0.8.3"
requests     = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pyinstaller = "^6.14.2"

[tool.poetry.scripts]
rmc = "rmc.cli:cli"

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
